Cal Distance added

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -63,7 +63,7 @@ address{
 .part{
   width: 27vw;
   height: 65vh;
-  border: 1px solid #000000;
+  border: 1px solid lightgray;
   border-radius: 10px;
 }
 
