--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,7 +6,7 @@
   height: 40vmin;
   }
 .App-header {
-  background-color: #282c34;
+  background-color:#1C1C1C;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -60,7 +60,7 @@ address{
 }
 
 .navbar-dark {
-  background-color: #000000;
+  background-color: #1C1C1C;
 }
 
 
