--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #000000;
+  background-color: #ffffff;
 }
 
 code {
@@ -17,7 +17,7 @@ container {
 }
 
 h6 {
-  color:white;
+  color:black;
   padding-bottom:5px;
   padding-top: 5px;
 
